--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,17 @@
  
             body {
                 font-family:'Wendy One', sans-serif;
-                height: 2200px;
+                height: 2600px;
             }
 			
 			body {
-                background: -moz-radial-gradient(center, ellipse cover, rgba(153,212,222,1) 0%, rgba(211,121,219,1) 100%); /* ff3.6+ */
-                background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, rgba(153,212,222,1)), color-stop(100%, rgba(211,121,219,1))); /* safari4+,chrome */
-                background:-webkit-radial-gradient(center, ellipse cover, rgba(153,212,222,1) 0%, rgba(211,121,219,1) 100%); /* safari5.1+,chrome10+ */
-                background: -o-radial-gradient(center, ellipse cover, rgba(153,212,222,1) 0%, rgba(211,121,219,1) 100%); /* opera 11.10+ */
-                background: -ms-radial-gradient(center, ellipse cover, rgba(153,212,222,1) 0%, rgba(211,121,219,1) 100%); /* ie10+ */
-                background:radial-gradient(ellipse at center, rgba(153,212,222,1) 0%, rgba(211,121,219,1) 100%); /* w3c */
-                filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#99D4DE', endColorstr='#D379DB',GradientType=1 ); /* ie6-9 */            
+                background: -moz-radial-gradient(center, ellipse cover, rgba(108,189,196,1) 0%, rgba(130,174,195,1) 19%, rgba(182,140,193,1) 63%, rgba(201,129,193,1) 78%); /* ff3.6+ */
+                background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, rgba(108,189,196,1)), color-stop(19%, rgba(130,174,195,1)), color-stop(63%, rgba(182,140,193,1)), color-stop(78%, rgba(201,129,193,1))); /* safari4+,chrome */
+                background:-webkit-radial-gradient(center, ellipse cover, rgba(108,189,196,1) 0%, rgba(130,174,195,1) 19%, rgba(182,140,193,1) 63%, rgba(201,129,193,1) 78%); /* safari5.1+,chrome10+ */
+                background: -o-radial-gradient(center, ellipse cover, rgba(108,189,196,1) 0%, rgba(130,174,195,1) 19%, rgba(182,140,193,1) 63%, rgba(201,129,193,1) 78%); /* opera 11.10+ */
+                background: -ms-radial-gradient(center, ellipse cover, rgba(108,189,196,1) 0%, rgba(130,174,195,1) 19%, rgba(182,140,193,1) 63%, rgba(201,129,193,1) 78%); /* ie10+ */
+                background:radial-gradient(ellipse at center, rgba(108,189,196,1) 0%, rgba(130,174,195,1) 19%, rgba(182,140,193,1) 63%, rgba(201,129,193,1) 78%); /* w3c */
+                filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6CBDC4', endColorstr='#C981C1',GradientType=1 ); /* ie6-9 */
             }
             span {
                 text-transform: uppercase;
@@ -280,7 +280,7 @@
 
             td {
                 font-family: 'Pattaya', sans-serif;
-                font-size: 20px;
+                font-size: 24px;
                 color: rgb(255, 255, 255);
                 text-align: center; 
                 vertical-align: middle;
@@ -305,32 +305,47 @@
             }
 
             #yanaPhoto1 {
-                height: 533px;
+                height: 477px;
                 width: 400px;
-                transform: rotateZ(10deg);
+                transform: rotateZ(12deg);
             }
 
             #yanaPhoto2 {
-                height: 533px;
+                height: 477px;
                 width: 400px;
-                transform: rotateZ(-5deg);
+                transform: rotateZ(-6deg);
             }
 
-            .photo {
+            #yanaPhoto3 {
+                height: 477px;
+                width: 400px;
+                transform: rotateZ(7deg);
+            }
+
+            #mainPhoto {
             display: block;
             width: 100%;
             height: 100%;
-            width: 800px;
-            height: 600px;
+            height: 477px;
+            width: 400px;
+            transform: rotateZ(-7deg);
             }
+
+            #backmainPhoto{
+                display: block;
+                width: 100%;
+                height: 100%;
+                width: 612px;
+                height: 459px;
+            }
+
             .cart-wrapper {
-            width: 720px;
-            height: 540px;
+            width: 612px;
+            height: 459px;
             margin: 60px auto;
             transform-style: preserve-3d;
             perspective: 800px;
             position: relative;
-            /* transform: rotateZ(-10deg); */
             transition: transform 0.6s linear;
             }
 
@@ -368,4 +383,8 @@
             .back {
             transform: rotateY(180deg);
             padding: 20px 20px 50px;
+            }
+
+            embed{
+                
             }
